--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,2 +1,5 @@
-@use "./display";
-@use "./inputs";
+// Import layout scss files
+@use "/layout/_layout-dir";
+
+// Import fonts, variable and mixin scss files
+@use "/abstracts/_abstract-dir";
