--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -1,1 +1,2 @@
 @import url('https://fonts.googleapis.com/css2?family=Koulen&family=Signika+Negative&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Koulen&family=Signika+Negative&display=swap');
