--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -3,6 +3,9 @@ $font-primary: "Koulen", sans-serif;
 $font-secondary: "Signika Negative", sans-serif;
 
 // Color variables
-$color-display: #379683;
-$color-input: #05386B;
 $color-background: #EDF5E1;
+$color-primary: #05386B;
+$color-secondary: #379683;
+$color-third: #5CDB95;
+$color-input-background: #8ee4af7c;
+
