added inputs to grid

--- a/styles/_inputs.scss
+++ b/styles/_inputs.scss
@@ -16,5 +16,13 @@
         align-items: center;
     }
 
+    #id {
+        grid-area: 1 / 1 / 2 / 2;
+    }
+
+    #plusMinus {
+        grid-area: 1 / 2 / 2 / 3;
+    }
+
 
 }
