--- a/styles/styles.css
+++ b/styles/styles.css
@@ -49,4 +49,10 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.inputs #id {
+  grid-area: 1/1/2/2;
+}
+.inputs #plusMinus {
+  grid-area: 1/2/2/3;
 }/*# sourceMappingURL=styles.css.map */
