--- a/styles/_display.scss
+++ b/styles/_display.scss
@@ -30,5 +30,6 @@
         flex-direction: column;
         justify-content: flex-end;
         align-items: flex-end;
+        font-family: $font-primary;
     }
 }
