cleaned up class naming

--- a/styles/_inputs.scss
+++ b/styles/_inputs.scss
@@ -11,7 +11,7 @@
     border-top-right-radius: 10px;
     font-family: $font-secondary;
 
-    &__button {
+    &__container {
         display: flex;
         justify-content: center;
         align-items: center;
