--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -3,6 +3,8 @@
 // Font variables
 $font-primary: "Koulen", sans-serif;
 $font-secondary: "Signika Negative", sans-serif;
+$font-large: 2.5rem;
+$font-medium: 1.5rem;
 
 // Color variables
 $color-background: white;
