--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,7 +11,6 @@ body {
 
 .display {
   height: 35vh;
-  font-family: "Koulen", sans-serif;
 }
 .display__top {
   margin-top: 1rem;
@@ -37,6 +36,10 @@ body {
   justify-content: flex-end;
   align-items: flex-end;
   font-family: "Koulen", sans-serif;
+  font-size: 2.5rem;
+}
+.display__memory {
+  font-size: 1.5rem;
 }
 
 .inputs {
@@ -58,6 +61,7 @@ body {
   background-color: #F7F7F7;
   border-style: none;
   font-family: "Signika Negative", sans-serif;
+  font-size: 1.5rem;
   width: 2.5rem;
   height: 2.5rem;
   border-radius: 0.75rem;
