--- a/styles/_display.scss
+++ b/styles/_display.scss
@@ -38,7 +38,14 @@
         font-size: $font-medium;
     }
 
+    &__current {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        align-items: center;
+    }
+
     &__color {
-        color: $color-third;
+        color: $color-secondary;
     }
 }
