--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,8 +1,8 @@
 @use "./fonts";
 
 // Font variables
-$font-primary: "Koulen", sans-serif;
-$font-secondary: "Signika Negative", sans-serif;
+$font-primary: "Signika Negative", sans-serif;
+$font-secondary: "Koulen", sans-serif;
 $font-large: 2.5rem;
 $font-medium: 1.5rem;
 
