--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -5,6 +5,7 @@ $font-primary: "Signika Negative", sans-serif;
 $font-secondary: "Koulen", sans-serif;
 $font-large: 2.5rem;
 $font-medium: 1.5rem;
+$font-small: 1rem;
 
 // Color variables
 $color-background: white;
