--- a/styles/styles.css
+++ b/styles/styles.css
@@ -40,7 +40,11 @@ body {
   font-size: 2.5rem;
 }
 .display__memory {
-  font-size: 1.5rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  font-size: 1rem;
 }
 .display__current {
   display: flex;
