TEST for dark mode and minus sign (slight working)

--- a/styles/_body.scss
+++ b/styles/_body.scss
@@ -5,6 +5,10 @@
     margin: 0;
 }
 
-body {
+.body {
     background-color: $color-background;
+
+    &--dark-mode {
+        background-color: $dark-background;
+    }
 }
