--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -15,3 +15,11 @@ $color-third: #60F9DD;
 $color-input-background: #F9F9F9;
 $color-input-button: #F7F7F7;
 
+// Dark Mode variables
+$dark-background: #22252D;
+$dark-primary: #FFFFFF;
+$dark-secondary: #EB6565;
+$dark-third: #60F9DD;
+$dark-input-background: #292D36;
+$dark-input-button: #272B33;
+
